<resources>
    <string name="app_name">Atividade 2</string>
    <string name="insira_o_usuario">Insira o usuário</string>
    <string name="insira_a_senha">Insira a senha</string>
    <string name="entrar">Sing Up</string>
    <string name="sair">Sair</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ullamcorper leo eget libero commodo, ac vulputate quam semper. Nam arcu lacus, fringilla sed sapien id, congue semper felis.</string>
    <string name="SingInSocial">Sing In with Social Media</string>
    <string name="user_name">User name</string>
    <string name="sig_in">Sig In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="terms">Allow Terms and Conditions</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="dont_account">Don´t have account?</string>
    <string name="logado">Login efetuado</string>
    <string name="cadastrado_efetudado">Cadastrado efetudado</string>

</resources>