<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mainbackgroun"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10sp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:textSize="25dp"
            />
        <TextView
            android:text="@string/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10sp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="#72FFFFFF"
            android:textSize="15dp"
            />

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/icon"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:text="@string/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="8dp"
            android:textColor="@color/white"
            android:textSize="25dp"
            />

        <TextView
            android:text="SLOGAN HERE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#72FFFFFF"
            android:textSize="15dp"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/botao_redondo"
            android:text="@string/sig_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/btnCads"
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@drawable/botao_redondo"
            android:textAllCaps="false"
            android:text="@string/entrar"
            android:textColor="@color/white"
            android:layout_marginBottom="80dp"
            />

        <TextView
            android:text="@string/SingInSocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10sp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:layout_marginLeft="120dp"
            android:layout_marginRight="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/facelobo"
            android:layout_gravity="center"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/twitterlobo"
            android:layout_gravity="center"/>

            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/linkedinlobo"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>